Prefer $HOME to ~

--- a/dotfiles.org
+++ b/dotfiles.org
@@ -182,7 +182,7 @@ Launch [[*picom][picom]] and [[*xsettingsd][xsettingsd]].
 
 #+BEGIN_SRC sh
   picom &
-  xsettingsd -c "${XDG_CONFIG_HOME:-~/.config}/xsettingsd/xsettingsd" &
+  xsettingsd -c "${XDG_CONFIG_HOME:-$HOME/.config}/xsettingsd/xsettingsd" &
 #+END_SRC
 
 Set SSH agent.
@@ -382,11 +382,11 @@ Non login
 #+END_SRC
 
 #+BEGIN_SRC sh :tangle no
-  mkdir -p "${XDG_DATA_HOME:-~/.local/share}/bash"
+  mkdir -p "${XDG_DATA_HOME:-$HOME/.local/share}/bash"
 #+END_SRC
 
 #+BEGIN_SRC sh
-  export HISTFILE="${XDG_DATA_HOME:-~/.local/share}/bash/history"
+  export HISTFILE="${XDG_DATA_HOME:-$HOME/.local/share}/bash/history"
 #+END_SRC
 
 #+BEGIN_SRC sh
@@ -418,14 +418,14 @@ When setting GnuPG's home, the directory must be created manually. To
 create it, run:
 
 #+BEGIN_SRC sh
-  mkdir -p "${XDG_DATA_HOME:-~/.local/share}/gnupg"
-  chmod 700 "${XDG_DATA_HOME:-~/.local/share}/gnupg"
+  mkdir -p "${XDG_DATA_HOME:-$HOME/.local/share}/gnupg"
+  chmod 700 "${XDG_DATA_HOME:-$HOME/.local/share}/gnupg"
 #+END_SRC
 
 Move data directory out of the way.
 
 #+BEGIN_SRC conf :tangle stow/gnupg/.config/environment.d/50-gnupg.conf
-  GNUPGHOME="${XDG_DATA_HOME:-~/.local/share}/gnupg"
+  GNUPGHOME="${XDG_DATA_HOME:-$HOME/.local/share}/gnupg"
 #+END_SRC
 
 To generate a PGP key, run:
@@ -628,7 +628,7 @@ Move maildir directory out of the way.
 To create the database, run:
 
 #+BEGIN_SRC sh
-  mbsync -c "${XDG_CONFIG_HOME:-~/.config}/isync/mbsyncrc" -a && mu init --my-address="nicolas@dejaeghe.re" --my-address="nicodeja@gmail.com" --my-address="nicodeja@mac.com" --my-address="Nicolas.DeJaeghere@belfius.be"
+  mbsync -c "${XDG_CONFIG_HOME:-$HOME/.config}/isync/mbsyncrc" -a && mu init --my-address="nicolas@dejaeghe.re" --my-address="nicodeja@gmail.com" --my-address="nicodeja@mac.com" --my-address="Nicolas.DeJaeghere@belfius.be"
 #+END_SRC
 
 * vdirsyncer :not_exp_env:
@@ -788,14 +788,14 @@ Info Specification (freedesktop)]].
 To register the scheme handler, run:
 
 #+BEGIN_SRC sh
-  update-desktop-database "${XDG_DATA_HOME:-~/.local/share}/applications"
+  update-desktop-database "${XDG_DATA_HOME:-$HOME/.local/share}/applications"
 #+END_SRC
 
 * Jupyter Notebook
 Move configuration directory out of the way.
 
 #+BEGIN_SRC conf :tangle stow/jupyter/.config/environment.d/50-jupyter.conf
-  JUPYTER_CONFIG_DIR="${XDG_CONFIG_HOME:-~/.config}/jupyter"
+  JUPYTER_CONFIG_DIR="${XDG_CONFIG_HOME:-$HOME/.config}/jupyter"
 #+END_SRC
 
 Documentation on configuring the frontend is [[https://jupyter-notebook.readthedocs.io/en/stable/frontend_config.html#persisting-configuration-settings][limited]]. For settings,
@@ -820,26 +820,26 @@ see [[https://codemirror.net/doc/manual.html#config][User manual and reference g
 Move configuration directory out of the way.
 
 #+BEGIN_SRC conf :tangle stow/jupyter/.config/environment.d/50-ipython.conf
-  IPYTHONDIR="${XDG_CONFIG_HOME:-~/.config}/ipython"
+  IPYTHONDIR="${XDG_CONFIG_HOME:-$HOME/.config}/ipython"
 #+END_SRC
 
 * CUDA
 Move cache directory out of the way.
 
 #+BEGIN_SRC conf :tangle stow/cuda/.config/environment.d/50-cuda.conf
-  CUDA_CACHE_PATH="${XDG_CACHE_HOME:-~/.cache}/nv/ComputeCache"
+  CUDA_CACHE_PATH="${XDG_CACHE_HOME:-$HOME/.cache}/nv/ComputeCache"
 #+END_SRC
 
 * Keras
 Move configuration directory out of the way.
 
 #+BEGIN_SRC conf :tangle stow/keras/.config/environment.d/50-keras.conf
-  KERAS_HOME="${XDG_CONFIG_HOME:-~/.config}/keras"
+  KERAS_HOME="${XDG_CONFIG_HOME:-$HOME/.config}/keras"
 #+END_SRC
 
 * NLTK
 Move data directory out of the way.
 
 #+BEGIN_SRC conf :tangle stow/nltk/.config/environment.d/50-nltk.conf
-  NLTK_DATA="${XDG_DATA_HOME:-~/.local/share}/nltk"
+  NLTK_DATA="${XDG_DATA_HOME:-$HOME/.local/share}/nltk"
 #+END_SRC
