[gnome] Add Gromit-MPX to Utilities folder

--- a/dotfiles.org
+++ b/dotfiles.org
@@ -323,6 +323,7 @@ To apply configuration, run:
   com.obsproject.Studio.desktop
   eid-viewer.desktop
   electrum.desktop
+  gromit-mpx.desktop
   org.gnome.Cheese.desktop
   org.gnome.Evince.desktop
   org.gnome.FileRoller.desktop
