[emacs] Update library headers

--- a/emacs.org
+++ b/emacs.org
@@ -3363,6 +3363,27 @@ For monitors and monitor layouts, see [[*Monitors][Monitors]].
 #+BEGIN_SRC emacs-lisp :tangle stow/emacs/.config/emacs/lisp/exar/exar.el
   ;;; exar.el --- Emacs, X Window System and RandR -*- lexical-binding: t; -*-
 
+  ;; Copyright (C) 2020 Nicolas De Jaeghere
+
+  ;; Author: Nicolas De Jaeghere <nicolas@dejaeghe.re>
+  ;; Keywords: unix
+  ;; URL: https://github.com/Koekelas/dotfiles
+
+  ;; This file is not part of GNU Emacs.
+
+  ;; This program is free software: you can redistribute it and/or modify
+  ;; it under the terms of the GNU General Public License as published by
+  ;; the Free Software Foundation, either version 3 of the License, or
+  ;; (at your option) any later version.
+
+  ;; This program is distributed in the hope that it will be useful,
+  ;; but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ;; GNU General Public License for more details.
+
+  ;; You should have received a copy of the GNU General Public License
+  ;; along with this program.  If not, see <https://www.gnu.org/licenses/>.
+
   ;;; Commentary:
 
   ;; Emacs, X Window System and RandR
@@ -4535,6 +4556,27 @@ Stavrou)]].
 *** gino - Generate project :wip:
 #+BEGIN_SRC emacs-lisp :tangle stow/emacs/.config/emacs/lisp/gino/gino.el
   ;;; gino.el --- Generate Arduino project -*- lexical-binding: t; -*-
+
+  ;; Copyright (C) 2020 Nicolas De Jaeghere
+
+  ;; Author: Nicolas De Jaeghere <nicolas@dejaeghe.re>
+  ;; Keywords: tools
+  ;; URL: https://github.com/Koekelas/dotfiles
+
+  ;; This file is not part of GNU Emacs.
+
+  ;; This program is free software: you can redistribute it and/or modify
+  ;; it under the terms of the GNU General Public License as published by
+  ;; the Free Software Foundation, either version 3 of the License, or
+  ;; (at your option) any later version.
+
+  ;; This program is distributed in the hope that it will be useful,
+  ;; but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ;; GNU General Public License for more details.
+
+  ;; You should have received a copy of the GNU General Public License
+  ;; along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
   ;;; Commentary:
 
