[emacs] Fix PragmataPro font family

--- a/emacs.org
+++ b/emacs.org
@@ -5796,7 +5796,7 @@ Plex]] for variable pitch.
 
 #+BEGIN_SRC emacs-lisp
   (defvar koek-font/pairs
-    '(((:family "PragmataPro Mono" :height 110)
+    '(((:family "PragmataPro Mono Liga" :height 110)
        (:family "IBM Plex Sans" :height 1.0))
       ((:family "Iosevka" :height 110)
        (:family "IBM Plex Sans" :height 1.0)))
