[emacs] Rephrase docstrings

--- a/emacs.org
+++ b/emacs.org
@@ -5747,8 +5747,8 @@ Load [[https://protesilaos.com/modus-themes/][Modus]] theme.
     (push 'modus-vivendi koek-thm/dark-themes))
 
   (defmacro koek-thm/with-modus-vars (variant &rest body)
-    "Evaluate BODY with Modus theme variables bound.
-  VARIANT is a symbol, the theme variant, either operandi or
+    "Evaluate BODY with variables of Modus theme variant VARIANT bound.
+  VARIANT is a symbol, the Modus theme variant, either operandi or
   vivendi."
     (declare (indent 1))
     `(if (eq ,variant 'operandi)
@@ -5759,7 +5759,7 @@ Load [[https://protesilaos.com/modus-themes/][Modus]] theme.
 
   (defun koek-thm/load-modus (variant)
     "Load and enable Modus theme.
-  VARIANT is a symbol, the theme variant, either operandi or
+  VARIANT is a symbol, the Modus theme variant, either operandi or
   vivendi."
     (let ((koek-thm/load-hook nil)        ; Dynamic variable
           (theme (or (and (eq variant 'operandi) 'modus-operandi)
