[emacs] Configure buffer-face

--- a/emacs.org
+++ b/emacs.org
@@ -2871,6 +2871,13 @@ For more information, see ~man 5 hunspell~.
     (remove-hook 'flymake-diagnostic-functions #'flymake-proc-legacy-flymake))
 #+END_SRC
 
+** buffer-face - Remap default face
+#+BEGIN_SRC emacs-lisp
+  (add-hook 'markdown-mode-hook #'variable-pitch-mode)
+  (add-hook 'org-mode-hook #'variable-pitch-mode)
+  (delight 'buffer-face-mode nil 'face-remap)
+#+END_SRC
+
 ** paren-face - Dim brackets
 [[https://github.com/tarsius/paren-face][paren-face (GitHub)]]
 
