--- a/emacs.org
+++ b/emacs.org
@@ -5993,6 +5993,12 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
     (defconst koek-ml/state '(" " "%*%+")
       "State mode line construct.")
 
+    (defconst koek-ml/keycast
+      '(:eval
+        (when (bound-and-true-p keycast-mode)
+          mode-line-keycast))
+      "Keycast mode line construct.")
+
     (defconst koek-ml/position
       '(:eval
         (unless (derived-mode-p 'pdf-view-mode)
@@ -6181,7 +6187,7 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
             `(,@koek-ml/dummies " "
               koek-ml/eldoc koek-ml/ace koek-ml/depth
               koek-ml/exwm-workspaces koek-ml/eyebrowse
-              koek-ml/id koek-ml/diff keycast-marker koek-ml/task koek-ml/modes))
+              koek-ml/id koek-ml/keycast koek-ml/diff koek-ml/task koek-ml/modes))
       (force-mode-line-update)
       (dolist (type koek-ml/variant-types)
         (when-let ((buffer (ediff-get-buffer type)))
@@ -6209,8 +6215,8 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
                   `(,@koek-ml/dummies " "
                     koek-ml/eldoc koek-ml/ace koek-ml/ediff
                     koek-ml/depth koek-ml/exwm-workspaces koek-ml/eyebrowse
-                    koek-ml/id koek-ml/state koek-ml/position koek-ml/pdf
-                    keycast-marker koek-ml/exwm-input koek-ml/input
+                    koek-ml/id koek-ml/state keycast-marker
+                    koek-ml/position koek-ml/pdf koek-ml/exwm-input koek-ml/input
                     koek-ml/flymake koek-ml/vc koek-ml/task koek-ml/modes)))
 #+END_SRC
 
