--- a/emacs.org
+++ b/emacs.org
@@ -600,7 +600,7 @@ recognize [[*subword - Recognize words in camel case words][subwords]].
     (koek-sp/setup-format-c-block-on-return-handler 'c++-mode "{")
     (koek-sp/setup-format-c-block-on-return-handler 'css-mode "{")
     (koek-sp/setup-format-c-block-on-return-handler 'java-mode "{")
-    (koek-sp/setup-format-c-block-on-return-handler 'js2-mode "{" "[")
+    (koek-sp/setup-format-c-block-on-return-handler 'js-mode "{" "[")
     (koek-sp/setup-format-c-block-on-return-handler 'json-mode "{" "[")
     (koek-sp/setup-format-c-block-on-return-handler 'scad-mode "{")
     (koek-sp/setup-format-c-block-on-return-handler 'python-mode "{" "[" "(")
@@ -739,7 +739,7 @@ When line is indented, press =TAB= to complete text before point.
      ("C-c e f" . eglot-code-actions)
      ("C-c e r" . eglot-rename))
     :hook
-    ((c-mode c++-mode erlang-mode mhtml-mode css-mode java-mode js2-mode json-mode python-mode) .
+    ((c-mode c++-mode erlang-mode mhtml-mode css-mode java-mode js-mode json-mode python-mode) .
      eglot-ensure)
     :config
     ;; Eclipse JDT Language Server lacks an executable. Eglot expects to
@@ -1042,7 +1042,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** New JavaScript Node.js file
-#+BEGIN_SRC snippet :tangle stow/emacs/.config/emacs/etc/yasnippet/snippets/js2-mode/node
+#+BEGIN_SRC snippet :tangle stow/emacs/.config/emacs/etc/yasnippet/snippets/js-mode/node
   # -*- mode: snippet; -*-
   # name: New JavaScript Node.js file
   # key: node
@@ -1059,7 +1059,7 @@ Inherit Clojure snippets.
 #+END_SRC
 
 *** New JavaScript browser file
-#+BEGIN_SRC snippet :tangle stow/emacs/.config/emacs/etc/yasnippet/snippets/js2-mode/browser
+#+BEGIN_SRC snippet :tangle stow/emacs/.config/emacs/etc/yasnippet/snippets/js-mode/browser
   # -*- mode: snippet; -*-
   # name: New JavaScript browser file
   # key: browser
@@ -5149,17 +5149,13 @@ Configure Conf mode afterwards.
 #+END_SRC
 
 ** JavaScript
-[[https://github.com/mooz/js2-mode][js2-mode (GitHub)]]
-
 #+BEGIN_SRC emacs-lisp
-  (use-package js2-mode
-    :straight t
-    :mode (rx ".js" string-end)
-    :interpreter "node"
+  (use-package js
+    :mode ((rx ".js" string-end) . js-mode)
     :config
     (use-package devdocs-lookup
       :bind
-      (:map js2-mode-map
+      (:map js-mode-map
        ("C-c d d" . devdocs-lookup-javascript)
        ("C-c d C-d" . devdocs-lookup-dom)
        ("C-c d C-e" . devdocs-lookup-dom_events)
@@ -5170,11 +5166,10 @@ Configure Conf mode afterwards.
        ("C-c d C-x" . devdocs-lookup-express)))
 
     ;; Resolve keybinding conflict with eglot
-    (unbind-key "M-." js2-mode-map)
+    (unbind-key "M-." js-mode-map)
 
-    (setq js2-mode-show-parse-errors nil)
-    (setq js2-mode-show-strict-warnings nil)
-    :delight (js2-mode "JS" :major))
+    (setq js-enabled-frameworks '(javascript))
+    :delight (js-mode "JS" :major))
 #+END_SRC
 
 *** indium - Interact with process
@@ -5187,7 +5182,7 @@ Configure Conf mode afterwards.
 
   (use-package indium-interaction
     :straight indium
-    :hook (js2-mode . indium-interaction-mode)
+    :hook (js-mode . indium-interaction-mode)
     :config
     ;; Resolve keybinding conflict with documentation keymap
     (unbind-key "C-c d" indium-interaction-mode-map)
@@ -5431,8 +5426,6 @@ templates]].
     ;; Resolve keybinding conflict with cider
     (unbind-key "C-c '" org-src-mode-map)
     (unbind-key "C-c C-k" org-src-mode-map)
-
-    (push '("js" . js2) org-src-lang-modes)
     :delight)
 
   (use-package ob-core
