[emacs] Move org-roam database to var/

--- a/emacs.org
+++ b/emacs.org
@@ -5556,6 +5556,11 @@ templates]].
     :config
     (setq org-roam-completion-system 'ivy))
 
+  (use-package org-roam-db
+    :defer t
+    :config
+    (setq org-roam-db-location (no-littering-expand-var-file-name "org-roam.db")))
+
   (use-package org-roam-protocol
     :after org-protocol)
 #+END_SRC
