[emacs] Separate sexps in cider-repl-mode

--- a/emacs.org
+++ b/emacs.org
@@ -593,6 +593,7 @@ recognize [[*subword - Recognize words in camel case words][subwords]].
     (setq sp-navigate-reindent-after-up nil)
     (setq sp-highlight-pair-overlay nil)
     (koek-sp/setup-separate-sexp-handler 'clojure-mode "(" "[" "{" "\"")
+    (koek-sp/setup-separate-sexp-handler 'cider-repl-mode "(" "[" "{" "\"")
     (koek-sp/setup-separate-sexp-handler 'lisp-mode "(" "\"")
     (koek-sp/setup-separate-sexp-handler 'emacs-lisp-mode "(" "[" "\"")
     (koek-sp/setup-separate-sexp-handler 'scheme-mode "(" "\"")
