[emacs] Simplify expand new snippet file file name

--- a/emacs.org
+++ b/emacs.org
@@ -889,8 +889,7 @@ For the major mode, see [[*YASnippet][YASnippet]].
     ;; Set new snippet file snippet
     (with-temp-buffer
       (insert-file-contents
-       (expand-file-name "yasnippet/snippets/snippet-mode/new"
-                         no-littering-etc-directory))
+       (expand-file-name "snippet-mode/new" (car (last yas-snippet-dirs))))
       (setq yas-new-snippet-default
             (buffer-substring (re-search-forward (rx line-start "# --\n"))
                               (point-max))))
