[emacs] Rotate windows counterclockwise

--- a/emacs.org
+++ b/emacs.org
@@ -2980,11 +2980,11 @@ steps.
     (defun koek-tf/rotate (&optional arg)
       "Rotate window layout.
   With `\\[universal-argument]' prefix argument ARG, rotate
-  counterclockwise, else, rotate clockwise."
+  clockwise, else, rotate counterclockwise."
       (interactive "P")
       (if arg
-          (rotate-frame-anticlockwise)
-        (rotate-frame-clockwise)))
+          (rotate-frame-clockwise)
+        (rotate-frame-anticlockwise)))
     :init
     (bind-keys
      ("C-c w f" . koek-tf/flip)
