[emacs] Bind devdocs-lookup-openjdk in clojure-mode

--- a/emacs.org
+++ b/emacs.org
@@ -4922,7 +4922,8 @@ Stavrou)]].
     (use-package devdocs-lookup
       :bind
       (:map clojure-mode-map
-       ("C-c d d" . devdocs-lookup-clojure~1.10)))
+       ("C-c d d" . devdocs-lookup-clojure~1.10)
+       ("C-c d C-j" . devdocs-lookup-openjdk~8)))
     :delight
     (clojure-mode "Clj" :major)
     (clojurescript-mode "Cljs" :major)
