[emacs] Remove unthemed sly data file name workaround

--- a/emacs.org
+++ b/emacs.org
@@ -4987,10 +4987,7 @@ Stavrou)]].
     :defer t
     :config
     ;; Resolve keybinding conflict with company
-    (unbind-key "TAB" sly-mrepl-mode-map)
-
-    (setq sly-mrepl-history-file-name
-          (no-littering-expand-var-file-name "sly-mrepl-history")))
+    (unbind-key "TAB" sly-mrepl-mode-map))
 #+END_SRC
 
 ** Conf
