[emacs] Fix loading snippets

--- a/emacs.org
+++ b/emacs.org
@@ -886,6 +886,9 @@ For the major mode, see [[*YASnippet][YASnippet]].
                      (or (koek-org/get-code-block-var-value name) ""))))
           (make-directory file-name 'parents))))
     :config
+    ;; Load snippets
+    (yas-reload-all)
+
     ;; Set new snippet file snippet
     (with-temp-buffer
       (insert-file-contents
